# dommern

./: .gitignore  Dockerfile  IDEAS.md  README.md  build.gradle  compose.yaml  init.sql  service_start.sh  settings.gradle
.github/: copilot-instructions.md
.github/actions/: gradle-build.yml
.github/actions/docker-build/: action.yml
.github/actions/gradle-build/: action.yml
.github/actions/tailscale-deploy/: action.yml
.github/workflows/: build-and-deploy.yml  build-and-test.yml  gradle-build.yml
dom/: README.md  pyproject.toml
dom/dom-cli/: cli.py
dom/dom-cli/deploy/: gh.py
dom/dom_cli/: cli.py
dom/dom_cli/deploy/: gh.py
gradle/: libs.versions.toml
pi-config/: README.md
src/main/resources/: application.properties  application.yml
src/main/resources/static/: package-lock.json  package.json
src/main/resources/templates/: index.html
src/test/resources/: application.yml
ui/: README.md  index.html  kusk.html  local.html  package-lock.json  package.json  pubspec.yaml  vite.config.js
ui/src/: App.vue  main.js  main_dev.js
ui/src/assets/: base.css  components.css  main.css
ui/src/components/: Header.vue  Kusk.vue  Round.vue  RundePage.vue
ui/src/mocks/: active.json  handlers.js  kusks_page.json  runder_page  runder_page.json
ui/src/models/: Kusk.ts
ui/src/router/: index.ts
ui/src/types/: BaneType.ts  Kusk.ts  Round.ts
ui/src/utils/: api.js
ui/src/views/: LeaderBoard.vue
ui/src/views/Kusk/: Form.vue  KuskForm.vue  KuskView.vue  View.vue
ui/src/views/LB/: LBHome.vue  LeaderBoard.vue
ui/web/: index.html  manifest.json
(+84 files in other folders)
